<resources>
    <string name="app_name">Ensemble</string>


    <array name="nav_drawables_list">
        <item name="home_img">@drawable/ic_home</item>
        <item name="home_img">@drawable/ic_account_black</item>
        <item name="language_img">@drawable/ic_favorite_menu</item>
        <item name="language_img">@drawable/ic_store_black_24dp</item>
        <item name="language_img">@drawable/ic_shopping_cart</item>
        <item name="language_img">@drawable/ic_info_outline_black_24dp</item>
        <item name="language_img">@drawable/ic_share_black_24dp</item>
        <item name="language_img">@drawable/ic_language</item>
        <item name="language_img">@drawable/ic_logout</item>
    </array>

    <string-array name="navigation_menu_items">
        <item name="home">Home</item>
        <item name="profile">Profile</item>
        <item name="favorite">My Favorite</item>
        <item name="companyCategory">Stores</item>
        <item name="categories">Categories</item>
        <item name="about">About</item>
        <item name="share">Share</item>
        <item name="language">عربى</item>
        <item name="logout">Logout</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="sale">Sale</string>
    <string name="in_stock">In Stock</string>
    <string name="sold_out">Sold Out</string>
    <string name="price">price</string>
    <string name="product_title">Product Title</string>
    <string name="category">Category</string>
    <string name="reviews_ratings">Reviews</string>
    <string name="quantity">Quantity</string>
    <string name="total_price">Total Price</string>
    <string name="addToCart">Add to cart</string>
    <string name="view_store">View store</string>
    <string name="featured">Featured</string>

    <string name="apply">Apply</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="sample_coupons">Sample Coupon Cpdes</string>

    <string name="product_price"> Product Price </string>
    <string name="subtotal"> Subtotal </string>
    <string name="checkout"> Checkout </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="view">View</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="new_password">New Password</string>
    <string name="save_changes">Save Changes</string>

    <string name="Sale">SALE</string>
    <string name="Featured">FEATURED</string>
    <string name="seller_name">Seller Name</string>
    <string name="signup">Signup</string>
    <string name="not_a_member">Not a Member ?</string>
    <string name="google_login">Google Login</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">I\'ve forgotten my password?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="service_terms">Service Terms</string>
    <string name="app_terms_services">Creating an account means you\'re okay with our</string>
    <string name="register">Register</string>

    <string name="address">address</string>
    <string name="pleaseWait">Please Wait</string>
    <string name="api_failure_message">Something went wrong, please try again</string>
    <string name="mobileNumber">Mobile number</string>
    <string name="completeFields">Complete fields</string>
    <string name="userRegisterdBefore">User registerd before</string>
    <string name="successfullyDone">Successfully done</string>
    <string name="mobileOrPasswordWrong">Mobile or password wrong</string>
    <string name="select_image">Select Image</string>
    <string name="arabic_title">Arabic Title</string>
    <string name="english_title">English Title</string>
    <string name="arabic_description">Arabic Description</string>
    <string name="english_description">English Description</string>
    <string name="upload_product">Upload Product</string>
    <string name="more_info">More Info</string>
    <string name="deliver">Deliver Me</string>
    <string name="phone">Phone</string>
    <string name="links">Links</string>
    <string name="totalImages">Total images : </string>
    <string name="edit">Edit</string>
    <string name="full_name">Full Name</string>
    <string name="your_message">Your Message</string>
    <string name="rate_now">Rate Now</string>
    <string name="rate_product">Rate Product</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="noRatingFounds">No rating found</string>
    <string name="rateSeller">Rate seller</string>
    <string name="edit_profile">Edit</string>
    <string name="info">Info</string>
    <string name="facebook_link">Facebook Link</string>
    <string name="instagram_link">Instagram Link</string>

    <string name="search_hint">Search</string>
    <string name="noSearchResults">No search results</string>
    <string name="notFound">Not found</string>

    <string name="color">Color</string>
    <string name="size">Size</string>

    <string name="confirmationCeckOutCart">Confirm order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="checkOutMessage">You order registerd successfully we will communicate with you as soon as possible</string>

    <string name="save">Save</string>
    <!-- toolbar titles -->
    <string name="addProduct">Add product</string>
    <string name="enterRate">Enter rate</string>
    <string name="home">Home</string>
    <string name="productDetails">Product details</string>
    <string name="productRate">Product rate</string>
    <string name="sellerRate">Seller rate</string>
    <string name="sellerDetails">Seller details</string>
    <string name="sellerProfile">Seller profile</string>
    <string name="sellers">Sellers</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="colors">Colors</string>

</resources>
