<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_above="@+id/upload">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_20sdp"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_photo"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:src="@drawable/profile"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/white"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/select_image"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20sdp"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:hint="@string/price"
                    android:id="@+id/price"
                    android:inputType="number"
                    android:textSize="@dimen/_13sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    />
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:id="@+id/sale_price"
                    android:layout_weight="1"
                    android:textSize="@dimen/_13sdp"
                    android:inputType="number"
                    android:hint="@string/sale"
                    android:layout_marginStart="@dimen/_10sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20sdp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/arabic_title"
                    android:id="@+id/arabic_title"
                    android:inputType="number"
                    android:textSize="@dimen/_13sdp"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/_10sdp"
                    />
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:id="@+id/english_title"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textSize="@dimen/_13sdp"
                    android:hint="@string/english_title"
                    android:layout_marginStart="@dimen/_10sdp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/arabic_description"
                    android:id="@+id/arabic_description"
                    android:inputType="number"
                    android:textSize="@dimen/_13sdp"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/_10sdp"
                    />
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:id="@+id/english_description"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textSize="@dimen/_13sdp"
                    android:hint="@string/english_description"
                    android:layout_marginStart="@dimen/_10sdp"/>

            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_product"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>