<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <include
        layout="@layout/toolbar"
        android:id="@+id/include_toolbar"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_110sdp"
        android:layout_below="@id/include_toolbar"
        android:id="@+id/recycler_view"
        >

    </androidx.recyclerview.widget.RecyclerView>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/select_image"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_below="@id/recycler_view"
            android:id="@+id/bt_upload_image"
            android:layout_centerHorizontal="true"
            />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_below="@id/bt_upload_image"
        android:layout_above="@+id/upload">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">


            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:id="@+id/spinner_category"
                >

            </androidx.appcompat.widget.AppCompatSpinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20sdp"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:hint="@string/price"
                    android:id="@+id/ed_product_price"
                    android:inputType="number"
                    android:textSize="@dimen/_13sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    />
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:id="@+id/ed_product_sale"
                    android:layout_weight="1"
                    android:textSize="@dimen/_13sdp"
                    android:inputType="number"
                    android:hint="@string/sale"
                    android:maxLines="1"
                    android:layout_marginStart="@dimen/_10sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_20sdp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/arabic_title"
                    android:id="@+id/ed__product_arabic_title"
                    android:inputType="text"
                    android:textSize="@dimen/_13sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:layout_marginEnd="@dimen/_10sdp"
                    />
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:id="@+id/ed_product_english_title"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textSize="@dimen/_13sdp"
                    android:hint="@string/english_title"
                    android:maxLines="1"
                    android:layout_marginStart="@dimen/_10sdp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/arabic_description"
                    android:id="@+id/ed_product_arabic_description"
                    android:inputType="text"
                    android:textSize="@dimen/_13sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:layout_marginEnd="@dimen/_10sdp"
                    />
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:id="@+id/ed_product_english_description"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textSize="@dimen/_13sdp"
                    android:maxLines="1"
                    android:hint="@string/english_description"
                    android:layout_marginStart="@dimen/_10sdp"/>

            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_upload_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_product"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>