<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/review_user_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/profile"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/review_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/product_title"
            android:textAlignment="viewStart"
            android:textColor="@color/textColorSecondary"/>

        <hyogeun.github.com.colorratingbarlib.ColorRatingBar
            android:id="@+id/review_user_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.1"
            app:changeable="false"
            android:layout_marginTop="2dp"
            style="?android:attr/ratingBarStyleSmall"
            app:empty_color="@color/colorAccentGrey"
            app:progress_color="@android:color/holo_orange_light" />

        <TextView
            android:id="@+id/review_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            android:text="@string/date"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:textColor="@color/textColorPrimaryDark" />

        <TextView
            android:id="@+id/review_user_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:maxLines="2"
            android:textSize="14sp"
            android:text="@string/description"
            android:textAlignment="viewStart"
            android:textColor="@color/textColorSecondaryLight" />

    </LinearLayout>

</LinearLayout>